Some changes in TODO list, and PATH update to hardcode the project directory.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
 		{
 			"label": "Run Maxima Script",
 			"type": "shell",
-			"command": "${env:MAXIMA_PATH}\\bin\\maxima.bat",
+			"command": "C:\\maxima-5.48.1\\bin\\maxima.bat",
 			"args": [
 				"-b",
 				"${fileBasename}"
