--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "terminal.integrated.tabs.location": "right",
     "terminal.integrated.defaultLocation": "editor",
+    "terminal.integrated.env.windows": {
+        "MAXIMA_PATH": "C:\\maxima-5.48.1"
+    },
     "multiCommand.commands": [
         {
             "command": "runMaximaSideBySide",
